fix search ui on smaller screens
git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/branches/3.8-TESTING@12785 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/share/html/NoAuth/css/web2/ticket-search.css
+++ b/share/html/NoAuth/css/web2/ticket-search.css
@@ -45,6 +45,8 @@
 %# those contributions and any derivatives thereof.
 %# 
 %# END BPS TAGGED BLOCK }}}
+
+
 #comp-Search-Build #body {
     position: relative;
 }
@@ -53,7 +55,7 @@
   position: absolute;
   margin-top: 0.2em;
   right: 1em;
-  width: 40%;
+  left: 60%;
   top: 1em;
 /*  margin-top: -1em; */
 }
